[gd_scene load_steps=3 format=3 uid="uid://bek72170oq8hh"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_7kejs"]
[ext_resource type="PackedScene" uid="uid://byixow0rkgeta" path="res://Scenes/others/instructions.tscn" id="3_2ru2f"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7kejs")

[node name="Main" type="Node2D" parent="."]

[node name="Logo" type="Label" parent="Main"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 313.0
offset_top = 63.0
offset_right = 839.0
offset_bottom = 258.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 194
text = "Purr"
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="Main"]
offset_left = 461.0
offset_top = 297.0
offset_right = 691.0
offset_bottom = 519.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Start_Button" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START"

[node name="Instructions" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Instructions"

[node name="Quit_Button" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "QUIT"

[node name="Credits" type="Node2D" parent="."]

[node name="Controls" parent="." instance=ExtResource("3_2ru2f")]
visible = false
layout_mode = 1

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 106.0
offset_top = 74.0
offset_right = 171.0
offset_bottom = 130.0
text = "<-"

[connection signal="button_down" from="Main/MarginContainer/VBoxContainer/Start_Button" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="Main/MarginContainer/VBoxContainer/Instructions" to="." method="_on_controls_button_down"]
[connection signal="button_down" from="Main/MarginContainer/VBoxContainer/Quit_Button" to="." method="_on_quit_button_button_down"]
[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
